Update parse_pdf poc
